[package]
name = "limine-protocol"
version = "0.1.0"
edition = "2024"
authors = ["h3tR"]
readme = "README.md"
categories = ["no-std::no-alloc", "no-std"]
repository = "https://github.com/h3tR/limine-protocol"
license-file = "LICENSE"
license = "GPL-3"
keywords = ["limine", "no_std", "protocol", "os", "kernel"]
description = "Library for implementation of the Limine Boot Protocol in kernel binaries"
