[package]
name = "limine-protocol-for-rust"
version = "0.1.8"
edition = "2024"
authors = ["h3tR"]
readme = "README.md"
categories = ["no-std::no-alloc", "no-std"]
repository = "https://github.com/h3tR/limine-protocol"
license = "GPL-3.0-or-later"
keywords = ["limine", "no_std", "protocol", "os", "kernel"]
description = "Library for implementation of the Limine Boot Protocol in kernel binaries"
